syntax = "proto3";

package vou.proto;

import "counterpart/rpc_create_store.proto";

option go_package = "VOU-Server/proto/gen";

service CounterpartService {
  rpc CreateStore(CreateStoreRequest) returns (CreateStoreResponse) {}
}
